css/customstyles.css
/* ... */
/* ======= Promo Section ======= */
.promo {
  background: #268BD2;
  background-size: cover;
  background-position: center;
  color: #fff;
  padding-top: 160px;
}

.promo #promotitle {
  padding-bottom: 130px;
}

.promo .titlewrapper{
    display: flex;
    align-items: center;
    justify-content: center;
}
.promo .titlewrapper img{
    flex-basis: center;
}
.promo .title {
  font-size: 98px;
  color: #103A54;
  margin-top: 0;
}
.promo .title .highlight {
  color: #eebf3f;
}
.promo .intro {
  font-size: 28px;
  max-width: 680px;
  margin: 0 auto;
  margin-bottom: 25px;
  margin-top:20px;
}
.promo .btns .btn {
  margin-right: 15px;
  font-size: 18px;
  padding: 8px 30px;
}
.promo .meta {
  margin-top: 120px;
  margin-bottom: 30px;
  color: #0a7396;
}
.promo .meta li {
  margin-right: 15px;
}
.promo .meta a {
  color: #0a7396;
}
.promo .meta a:hover {
  color: #074f66;
}
.promo .social-media {
  background: #2073A5;
  padding: 10px 0;
  margin: 0 auto;
}
.promo .social-media li.facebook-like {
  margin-top: 0;
  position: relative;
  top: -5px;
}
.promo .social-icons {
  list-style: none;
  padding: 10px 0;
  margin-bottom: 0;
  display: inline-block;
  margin: 0 auto;
}
.promo .social-icons li {
  float: left;
}
.promo .social-icons li:last-of-type a{
  margin-right: 0;
}
.promo .social-icons a {
  display: inline-block;
  background: #268BD2;
  width: 48px;
  height: 48px;
  text-align: center;
  padding-top: 12px;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
  border-radius: 50%;
  -moz-background-clip: padding;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  margin-right: 8px;
  float: left;
}
.promo .social-icons a:hover {
  background: #eebf3f;
}
.promo .social-icons a .fa,
.promo .social-icons a .far,
.promo .social-icons a .fab,
.promo .social-icons a .fas {
  color: #fff;
}
.promo .social-icons a .fa:before,
.promo .social-icons a .far:before,
.promo .social-icons a .fab:before,
.promo .social-icons a .fas:before {
  font-size: 26px;
  text-align: center;
  padding: 0;
}

.promo .circle {
    background: white;
    border-radius: 50%;
    height: 150px;
    width: 150px;
    margin-right: 20px;
}

/* ======= About Section ======= */
.about {
  padding: 80px 0;
  background: #f5f5f5;
}
.about .title {
  color: #103A54;
  margin-top: 0;
  margin-bottom: 60px;
}
.about .intro {
  max-width: 800px;
  margin: 0 auto;
  margin-bottom: 60px;
}
.about .item {
  position: relative;
  margin-bottom: 30px;
}
.about .item .icon-holder {
  position: absolute;
  left: 30px;
  top: 0;
}
.about .item .icon-holder .fa {
  font-size: 24px;
  color: #103A54;
}
.about .item .content {
  padding-left: 60px;
}
.about .item .content .sub-title {
  padding-top: 0;
  max-width: none;
  margin-top: 0;
  color: #103A54;
  font-size: 18px;
}
/* ======= Features Section ======= */
.features {
  padding: 80px 0;
  background: #17baef;
  color: #fff;
}
.features .title {
  color: #074f66;
  margin-top: 0;
  margin-bottom: 30px;
}
.features a {
  color: #074f66;
}
.features a:hover {
  color: #042a36;
}
.features .feature-list li {
  margin-bottom: 10px;
  color: #074f66;
}
.features .feature-list li .fa {
  margin-right: 5px;
  color: #fff;
}

/* ======= Carousel Section ======= */
.carousel {
  padding: 20px 0;
  background: #f5f5f5;
}
.carousel-inner {
  margin-bottom: 50px;
}
.carousel-inner img{
  display: block;
  height: auto;
  min-width: 100%;
  width: 100%;
  max-width: 100%;
  line-height: 1;
}
.carousel-indicators {
  bottom: 20px;
}
.carousel-indicators li{
  background-color: rgba(16, 58, 84, 0.5);
}
.carousel-indicators .active{
  background-color: #103A54;
  margin-top: 10px;
  margin-bottom: 10px;
}
.carousel-control-prev{
  top: unset;
  bottom: 10px;
  opacity: 1;
}
.carousel-control-next{
  top: unset;
  bottom: 10px;
  opacity: 1;
}

.carousel-control-prev i, .carousel-control-next i{
  font-size: 2em;
  color: #103A54;
}
/* ======= Gallery Section ======= */
.gallery {
  padding: 80px 0;
  background: #f5f5f5;
  text-align: justify;
}
.gallery .title {
  color: #103A54;
  margin-top: 0;
  margin-bottom: 30px;
}
.gallery .block-left img,
.gallery .block-right img {
  max-width: 500px;
  width: 100%;
  height: auto;
}
.gallery .gallery-inner {
  max-width: 800px;
  background: #fff;
  padding: 30px;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  -ms-border-radius: 4px;
  -o-border-radius: 4px;
  border-radius: 4px;
  -moz-background-clip: padding;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  margin: 0 auto;
}
.gallery .block-left,
.gallery .block-right {
  margin: 30px 0 30px 0;
  text-align: left;
}
.gallery .block-left img {
  float: left;
}
.gallery .block-right img {
  float: right;
}
.gallery .media img {
    max-width: 300px;
    max-height: 200px;
}
.gallery .media {
    margin: 40px 0 40px 0;
}

/* The Modal (background) */
.imageModal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    padding-top: 100px; /* Location of the box */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: scroll; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.3); /* Black w/ opacity */
}
.imageModal img {
  margin: 0 auto;
  display: block;
  width: 60%;
}

.video {
  margin-bottom: 30px;
}


/* Add Animation - Zoom in the Modal */
.modal-content{
    animation-name: zoom;
    animation-duration: 0.3s;
}

@keyframes zoom {
    from {transform:scale(0)}
    to {transform:scale(1)}
}

/* 100% Image Width on Smaller Screens */
@media only screen and (max-width: 700px){
    .modal-content {
        width: 100%;
    }
}

/* ======= Downloads Section ======= */
.downloads {
  padding: 80px 0;
  background: #268BD2;
  color: #fff;
}
/* ... */

